--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.2/css/bulma.min.css">
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat'
+            rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Montserrat-Regular'
+            rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Sans-Serif'
+            rel='stylesheet'>
+
         <link rel="stylesheet" href="./css/style.css">
-        <script async src="./js/opencv.js"
-            type="text/javascript"></script>
+        <!--<script async src="./js/opencv.js" type="text/javascript"></script>-->
         <script async src="https://docs.opencv.org/4.10.0/opencv.js"
             type="text/javascript"></script>
 
