Add: Add CONTRIBUTING.md file
Fix: Url references

--- a/index.html
+++ b/index.html
@@ -99,18 +99,24 @@
                     <img src="./img/presentation/gazelens.svg" />
                 </figure>
                 <figure class="media-left section-header-bytecso">
-                    <img src="./img/presentation/bytecso.svg" />
+                    <a href="https://tecso.coop/" target="_blank">
+                        <img src="./img/presentation/bytecso.svg" />
+                    </a>
                 </figure>
                 <div class="media-content">
                 </div>
                 <div class="media-right">
-                    <button
-                        class="button-license font-size-default">License</button>
+                    <a
+                        class="button-license font-size-default"
+                        href="https://github.com/tecsocoop/gazelens?tab=MIT-1-ov-file#"
+                        target="_blank">License</a>
                 </div>
                 <div class="media-right">
-                    <button class="button-github font-size-default">
+                    <a class="button-github font-size-default"
+                        href="https://github.com/tecsocoop/gazelens"
+                        target="_blank">
                         <img src="./img/presentation/github.svg" />Source
-                    </button>
+                    </a>
                 </div>
             </article>
             <hr class="section-header-hr">
