doc: Add help text at home

--- a/index.html
+++ b/index.html
@@ -177,14 +177,11 @@
                                     Edit images instantly
                                 </p>
                                 <p class="comments-description">
-                                    Lorem ipsum dolor sit amet
-                                    consectetur. Hac risus quis at
-                                    viverra. Et
-                                    parturient maecenas nisl in mauris
-                                    enim. Non orci tristique sed sit eu.
-                                    Amet pretium sit blandit ac vitae
-                                    pharetra hendrerit. Ultrices cras
-                                    augue diam ipsum
+                                    Load and edit images effortlessly! Add CV2 filters 
+                                    to build a stack of effects, and see the results 
+                                    in real time. Rearrange the filters, adjust 
+                                    their parameters using sliders, and fine-tune your 
+                                    edits until you achieve the desired outcome.
                                 </p>
                             </div>
                         </div>
@@ -200,14 +197,9 @@
                                     Copy and Develop
                                 </p>
                                 <p class="comments-description">
-                                    Lorem ipsum dolor sit amet
-                                    consectetur. Hac risus quis at
-                                    viverra. Et
-                                    parturient maecenas nisl in mauris
-                                    enim. Non orci tristique sed sit eu.
-                                    Amet pretium sit blandit ac vitae
-                                    pharetra hendrerit. Ultrices cras
-                                    augue diam ipsum
+                                    Easily download your edited image or copy the 
+                                    automatically generated Python and JavaScript source 
+                                    code to reproduce the same effects anywhere!
                                 </p>
                             </div>
                         </div>
